# parse

./: .gitignore  Datastruct.hs  Helper.hs  ParseClash.hs  ParseExpr.hs  ParseState.hs  ParseState.hs-boot  ParseTypes.hs  ParseVHDL.hs  ParseVHDL.hs-boot  Ppr.hs  beschrijving parseArchBody.doc  getVhdlAst.hs  parse-clash.cabal  parseDatastruc.hs  parseExpr.hs  parseVHDL.hs  testparsing.hs  verslag.txt
examples/: Finf.hs  ParseVHDL.hs  Plus1x2.hs  TupleTest.hs  acc parsed.txt  cpu.hs  finf.VHDL.AST.txt  fir.hs  hardTuple.hs  muxTest parsed.txt  muxTest.VHDL.AST.txt  muxTest.hs  plus1.VHDL.AST.txt  plus1.restult.datastruct.txt  plus1.result.datastruct2.txt  simpleTuple.hs
examples/acc/: acc.datastruct.txt  acc.hs  acc.vhdl.ast.txt
examples/macc/: README.txt  macc geparsed.txt  macc.VHDL.AST.txt  macc.hs  macc.vhdlAst.txt
examples/macc/vhdl/MultiplyAccumulate.macc/: initAccumComponent_1.vhdl  maccComponent_0.vhdl  types.vhdl
lib/: datastruc.hs
testmodule/: Whiteboxtest.hs
