Name: parse-clash
Version: 0.0.1
package-url: http://github.com/ontwerpproject-clash/parse
Category: Hardware
Build-Type: Simple
Cabal-Version: >= 1.2

Library
  build-depends:
    clash-owp-custom >= 0.1.2.2,
    vhdl,
    base >= 4,
    ghc-paths,
    transformers,
    data-accessor-template, data-accessor-transformers,
    containers,
    pretty
  exposed-modules: ParseClash
  other-modules: Datastruct, ParseTypes, ParseVHDL, ParseState, Helper, Ppr
